# brainfocaml

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  brainfocaml.install  brainfocaml.opam  dune-project
lib/: .merlin  dune  error.ml  error.mli  location.ml  location.mli  parser.ml  parser.mli  result.ml  result.mli
src/: brainfuck.mllib  brainofocaml.ml  compiler.ml  compiler.mli  memory.ml  memory.mli  parser.ml  parser.mli  runner.ml  runner.mli  zipper.ml  zipper.mli
src/commons/: dune  error.ml  error.mli  location.ml  location.mli  result.ml  result.mli
src/parsing/: dune  token.ml  token.mli
test/: dune  test.ml
test/helpers/: dune  helpers.ml  helpers.mli
test/lib/: dune
