opam-version: "2.0"
synopsis: "Brainfuck in OCaml"
version: "2.0.0"
maintainer: "xvw"
authors: ["xvw"]
homepage: "https://github.com/xvw/brainfocaml"
bug-reports: "https://github.com/xvw/brainfocaml/issues"
dev-repo: "git+https://github.com/xvw/brainfocaml.git"
license: "MIT"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name ] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]

depopts: [
  "base-unix"
  "base-threads"
]
 

depends: [
  "dune"
  "odoc" {with-doc}
  "ocaml" { >= "4.08.1" }
  "alcotest" {with-test}
]
